--- a/views/layouts/base.hbs
+++ b/views/layouts/base.hbs
@@ -1,4 +1,4 @@
-<!doctype html>
+{{!-- <!doctype html>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
@@ -12,6 +12,23 @@
   </head>
   <body>
     <div class="container">
+
+      {{#if success_messages }}        
+            {{#each success_messages}}
+                <div class="alert alert-success">
+                    {{this}}
+                </div>
+            {{/each}}        
+        {{/if}}
+
+        {{#if error_messages}}
+            {{#each error_messages}}
+                <div class="alert alert-danger">
+                    {{this}}
+                </div>
+            {{/each}}       
+
+        {{/if}}
     {{#block 'content'}}{{/block}}
     </div>
     <!-- Optional JavaScript -->
@@ -21,4 +38,116 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </body>
 </html>
+ --}}
 
+
+<!doctype html>
+<html lang="en">
+
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+
+
+
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+
+  <title>Hello, world!</title>
+</head>
+
+<body>
+  <div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">Navbar w/ text</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+        aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarText">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a href="/posters" class="nav-link">Posters</a>
+          </li>
+          <li class="nav-item">
+            <a href="/users/profile" class="nav-link">Profile</a>
+          </li>
+          <li class="nav-item">
+            <a href="/shoppingCart" class="nav-link">Cart</a>
+          </li>
+          <li class="nav-item">
+            <a href="/checkout" class="nav-link">Checkout</a>
+          </li>
+          <li class="nav-item">
+            <a href="/users/logout" class="nav-link">Logout</a>
+          </li>
+        </ul>
+        <div>
+          {{#if user}}
+          Hi, {{user.username}}
+
+          <a href="/users/logout" class="ml-3 btn btn-primary btn-sm">Logout</a>
+
+          {{else}}
+          Hi, stranger
+          <a href="/users/login" class="ml-3 btn btn-primary btn-sm">Login</a>
+          {{/if}}
+        </div>
+      </div>
+    </nav>
+  </div>
+  <div class="container">
+    {{#if success_messages }}
+    {{#each success_messages}}
+    <div class="alert alert-success">
+      {{this}}
+    </div>
+    {{/each}}
+    {{/if}}
+
+    {{#if error_messages}}
+    {{#each error_messages}}
+    <div class="alert alert-danger">
+      {{this}}
+    </div>
+    {{/each}}
+
+    {{/if}}
+
+
+    {{#block 'content'}}{{/block}}
+  </div>
+  <!-- Optional JavaScript -->
+
+
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
+  {{#block 'js'}}
+  {{/block}}
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"
+    integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ=="
+    crossorigin="anonymous"></script>
+
+  <script src="https://widget.cloudinary.com/v2.0/global/all.js" type="text/javascript"></script>
+
+
+</body>
+
+</html>
