--- a/views/layouts/base.hbs
+++ b/views/layouts/base.hbs
@@ -77,7 +77,13 @@
             <a href="/posters" class="nav-link">Posters</a>
           </li>
           <li class="nav-item">
+            <a href="/posters/create" class="nav-link">Create Posters</a>
+          </li>
+          <li class="nav-item">
             <a href="/users/profile" class="nav-link">Profile</a>
+          </li>
+          <li class="nav-item">
+            <a href="/users/register" class="nav-link">Register</a>
           </li>
           <li class="nav-item">
             <a href="/shoppingCart" class="nav-link">Cart</a>
