added order management base hbs

--- a/views/layouts/base.hbs
+++ b/views/layouts/base.hbs
@@ -89,6 +89,9 @@
             <a href="/shoppingCart" class="nav-link">Cart</a>
           </li>
           <li class="nav-item">
+            <a href="/orders" class="nav-link">Orders</a>
+          </li>
+          <li class="nav-item">
             <a href="/checkout" class="nav-link">Checkout</a>
           </li>
           <li class="nav-item">
